tests/programs/valid/AbstractMethodExample.java
public abstract class AbstractMethodExample {
    public abstract void abstractMethod();
}
