tests/programs/invalid/test_double.java
public class test_double {
  protected double x;
}